Deleted the nodeDelete and nodeUpdate transformers
Signed-off-by: Harsh Sawarkar <harshsawarkar111@gmail.com>